--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.teradata</groupId>
+      <groupId>com.teradata.jdbc</groupId>
       <artifactId>terajdbc4</artifactId>
       <version>17.20.00.12</version>
     </dependency>
