--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <dependencies>
     <dependency>
       <groupId>com.teradata.jdbc</groupId>
-      <artifactId>terajdbc4</artifactId>
+      <artifactId>terajdbc</artifactId>
       <version>17.20.00.12</version>
     </dependency>
     <dependency>
